writing through lede item myself

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -1,12 +1,4 @@
-<!--
-
-Beginning to work through the lead item in this draft. Version below contains my own thoughts, as well as some from NotebookLM itself based on this prompt:
-
-I'm working on an article about how journalists in particular might use NotebookLM as a tool in their work. Could you give some tips of your own?
-
--->
-
-# AI tips for journalists <!-- Need AI prompts to generate better hed, subhead later, when lead item is finished. -->
+# TKTK
 ## tktk
 
 ![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
@@ -23,31 +15,23 @@ I'm working on an article about how journalists in particular might use Notebook
 
 <hr>
 
-**Among several AI apps I've been trying,** Google's NotebookLM has some features I've been finding particularly relevant to working on w3w, and to journalism in general.
+**Among several AI apps I've been trying,** Google's [NotebookLM](https://notebooklm.google.com/) has some features I've been finding particularly relevant for working on w3w, and to journalism in general.
 
-I point that out because I know a number of journalists read the newsletter. If you're looking for a place to kickstart your own learning about AI, NotebookLM could be a good place to start.
+I highlight this because  I know a number of journalists read the newsletter. If you're looking for a place to kickstart your own learning about AI, NotebookLM could be a great option.
 
-- **Familiarity:** <!-- As the name would indicate, it's a notebook -- but on steroids. NotebookLM is Every reporter uses notebooks. -->
+Below are what I think are NotebookLM's journalism-specific strengths. Admittedly, you might be able to replicate these with some other AI tool, among a dizzying list of options that's growing everyday. But in my experience so far, it's hard to beat NotebookLM's combination of...
 
-- **Customizability:** tktk
+- **Familiarity:** The metaphor of a notebook should be accessible to any reporter, as the ink-and-paper variety are such an essential tool of the trade. NotebookLM does live up to its name aptly as a place for capturing information on the go. There are simple features for you to take notes of your own, with the option to either store them in the traditional way or turn them into training data for the AI. If you do the latter, NotebookLM's chatbot features effectively become a research assistant to make the information more useful.
 
-- **Transparency:** tktk
+- **Customizability:** You can also add documents, research reports, interview transcripts, hyperlinks and other information as training data for NotebookLM. Thus, if you're covering a particular beat, you can make the app more expert at it to complement your own knowledge.
 
-<!-- Example of the Stanford report. -->
+- **Transparency:** The options to add or remove training data yourself make NotebookLM much less of a "black box" than other AI tools I've tried. If you ask it questions in its chat tab, NotebookLM doesn't just tell you what it knows. You can understand pretty clearly *how* it knows what it knows -- a very important distinction in a newsroom.
 
-<!-- Tips provided by Notebook LM itself... -->
+As in many other fields, I think the sweet spot for journalists right now is *collaboration* with useful AIs. I can definitely see where these things, if used properly, could make a person more effective and productive at the job.
 
-Here are some tips for journalists considering using NotebookLM in their work, based on the information in the sources:
+I would also say the anxiety (or in some cases eagerness) for AI to straight-up replace journalists is overblown at this point. I frankly don't think NotebookLM or any other chatbot tool I've seen meets those requirements yet.
 
-• Use NotebookLM to process and learn from large amounts of existing information. One source specifically suggests feeding "old data and documents into the thing as training data". For journalists, this could mean uploading transcripts of previous interviews, past articles on a topic, government reports, or other background materials relevant to their current reporting. By doing this, NotebookLM can become a centralized knowledge base for a specific investigation or beat.
-
-• Leverage NotebookLM for enhanced note-taking. The same source recommends using the tool for "notetaking". This suggests that as journalists review documents or conduct new research, they can use NotebookLM to record and organize their notes in relation to the source material they have already uploaded. This could help in maintaining context and easily linking new information to existing knowledge.
-
-• Accelerate learning about new subjects, especially in rapidly evolving fields like AI. The tip also mentions that NotebookLM can "accelerate your learning about AI". Journalists who are new to covering a particular beat or who need to quickly get up to speed on a complex topic can use NotebookLM to process foundational documents and identify key concepts and relationships within the material. This could significantly reduce the initial learning curve.
-
-• Consider it as a tool to structure and organize your research process. While not explicitly stated as a tip, the fact that the newsletter author mentions their own structured approach to using AI tools, including the use of NotebookLM, suggests that such tools can help bring more organization to a journalist's workflow. NotebookLM, by allowing you to work directly with your source material and your notes together, could aid in structuring your research, identifying gaps in your knowledge, and forming connections between different pieces of information.
-
-In essence, the key seems to be to treat NotebookLM as a dynamic research assistant that can learn from the documents you provide and help you extract, organize, and understand the information more efficiently. This could be particularly valuable for in-depth investigative work or for staying informed on complex and evolving topics.
+Could that change at some point? Maybe. But for now, if journalist friends were to ask me for advice, I would say the biggest risk I see for you isn't being replaced by an AI. It's being replaced by a person who knows how to use AI more adroitly than you do. So just get going with it in some way that you're comfortable with.
 
  <hr>
 
