Minor copyedit by me

--- a/2025/2025-04-27-wir.md
+++ b/2025/2025-04-27-wir.md
@@ -74,7 +74,7 @@ Could that change at some point? Maybe. But for now, if journalist friends were 
 
 *The week's top headlines about blockchain, AI, and other emerging technologies and trends re-shaping the web:*
 
-- **Bitcoin's valuation briefly surpassed that of Google's parent Alphabet.** The cryptocurrency also became the world's [fifth-largest asset](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap) by market capitalization. However, a [strong earnings report](https://finance.yahoo.com/news/google-stock-rises-after-it-beats-on-earnings-raises-dividend-and-authorizes-70-billion-in-buybacks-192027323.html) from Alphabet helped it recover ground later in the week. As of Friday's close on Wall Street, Alphabet was valued at $TK trillion versus $TK trillion for bitcoin... <!-- Update after Friday's close. --> An [improved](https://www.reuters.com/world/china/china-considers-exempting-some-goods-us-tariffs-source-says-2025-04-25/) outlook on tariffs helped propel riskier assets like stocks and crypto throughout the week. That said, fears of a [possible U.S. recession](https://www.yahoo.com/news/imf-raises-us-recession-risk-192909541.html) are likely to simmer awhile longer.
+- **Bitcoin's valuation briefly surpassed that of Google's parent Alphabet.** The cryptocurrency also became the world's [fifth-largest asset](https://www.coindesk.com/markets/2025/04/23/bitcoin-becomes-fifth-largest-global-asset-surpasses-google-s-market-cap) by market capitalization. However, a [strong earnings report](https://finance.yahoo.com/news/google-stock-rises-after-it-beats-on-earnings-raises-dividend-and-authorizes-70-billion-in-buybacks-192027323.html) from Alphabet helped it recover ground later in the week. Heading into Monday's open on Wall Street, Alphabet is valued at $1.95 trillion versus $1.87 trillion for bitcoin... An [improved](https://www.reuters.com/world/china/china-considers-exempting-some-goods-us-tariffs-source-says-2025-04-25/) outlook on tariffs helped propel riskier assets like stocks and crypto throughout the week. That said, fears of a [possible U.S. recession](https://www.yahoo.com/news/imf-raises-us-recession-risk-192909541.html) are likely to simmer awhile longer.
 
 - **Big Tech's antitrust woes piled up in court.** The U.S. Justice Department told a federal judge in Washington it believes [Google should be broken up](https://news.google.com/read/CBMiiAFBVV95cUxPb0J4YWpWUW1aSXZUeUdkT0lPUnNvWFRIYzRRaWVhUmFzSlduSUNNWGpzRGxlT0xhaWtJU0J3ZVlPUWJkamhhY2xtZXV6TTVOOWZNUElYODV3dVFIRGxKcTN4Y0Z2U2l4OWR0d1djeXJBZDROS0xSLWU5QXNHOVpTYjk0QUxvckww?hl=en-US&gl=US&ceid=US%3Aen), including a sale of its Chrome browser. Google's lawyers are pushing for a narrower set of remedies... Meanwhile, in Meta's antitrust trial, the government introduced into evidence internal company emails in which CEO Mark Zuckerberg weighed a possible spin-off of Instagram due to concerns it was ["cannibalizing"](https://techcrunch.com/2025/04/21/mark-zuckerberg-once-suggested-spinning-out-instagram-as-a-solution-to-its-cannibalization-of-facebook/) Facebook's user engagement.
 
@@ -100,4 +100,4 @@ Could that change at some point? Maybe. But for now, if journalist friends were 
 
 -  **People are using cannabis as... a pre-workout supplement?** Sounds like a terrible idea to me. But hey. Whatever gets you through Mile 26. ([Salon](https://www.salon.com/2025/04/19/couch-potatoes-no-more-stoners-are-using-cannabis-to-help-them-exercise-and-reach-a-runners-high/))
 
-_**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊 
+_**That's it for now. Thanks for reading the newsletter today! Best wishes for a healthy and productive week ahead.**_ 😊
